# Voice-Agent

./: .gitignore  ENV_CONFIG_SUMMARY.md  Makefile  PHASE2_TEST.md  PHASE3_TEST.md  PHASE4_DEPLOY.md  PHASE5_INTEGRATION.md  PHASE6_BARGE_IN.md  PHASE7_PRODUCTION.md  README.md  TEST_PHASE1.md
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  livekit_room_handler.py
backend/app/api/routes/: __init__.py  audio.py  health.py  livekit.py  monitoring.py
backend/app/api/websockets/: __init__.py  voice_stream.py
backend/app/config/: __init__.py  settings.py
backend/app/models/: __init__.py  audio_models.py  response_models.py
backend/app/services/: __init__.py  health_monitor.py  livekit_worker.py  metrics_manager.py  pipeline_coordinator.py  qwen_service.py  streaming_asr.py  streaming_llm.py  streaming_tts.py  tts_service.py  vad_service.py  whisper_service.py
backend/app/utils/: __init__.py  audio_test.py  audio_utils.py  error_handlers.py  logger.py
backend/tests/: __init__.py  test_audio.py  test_audio_processing.py  test_services.py
frontend/: .gitignore  README.md  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  AppLiveKit.js  index.js
frontend/src/components/: AudioPlayer.js  AudioWaveform.js  ErrorDisplay.js  IdleOrb.js  LiveKitVoiceAgent.js  ProcessingOrb.js  StatusIndicator.js  TranscriptDisplay.js  VoiceRecorder.js
frontend/src/services/: api.js  audioService.js  websocketService.js
frontend/src/utils/: audioUtils.js  constants.js  (+1 more)
